--- a/.stoat/config.yaml
+++ b/.stoat/config.yaml
@@ -2,12 +2,18 @@ version: 1
 enabled: true
 tasks:
   merged-test-coverage:
+    metadata:
+      name: Test coverage report
     static_hosting:
       path: coverage/merged/lcov-report
   storybook:
+    metadata:
+      name: Storybook
     static_hosting:
       path: storybook-static
   cypress-video:
+    metadata:
+      name: Cypress video
     static_hosting:
       path: cypress/videos/spec.js.mp4
   build-time:
